final bit of styling

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,34 @@
 html,body{
     height: 100%;
     width: 100%;
-    
-    
+    background-color: #f0f8ff;    
 }
 
+@keyframes zoom {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(1.1);
+    }
+}
+
+.header{
+    display: flex;
+}
+
+.header img{
+    margin-top:10px;
+    margin-left: 20px;
+    background-color:rgb(240, 248, 250);
+    border-radius: 20px;
+    animation: zoom 2s infinite alternate;
+}
 .title{
     display: flex;
-    justify-content: center;
+    flex: 1;
+    margin-left: 770px;
+   
 }
 
 .main-container{
@@ -15,7 +36,7 @@ html,body{
     flex-direction: column;
     align-items:center;
     height: 100%;
-    margin-top: 80px;
+    margin-top: 60px;
 }
 
 .playerInput{
